# projectLinking

./: .gitignore  CMakeLists.txt  DESIRED_LOOK.txt  README.md  main.cpp
coreProject/: CMakeLists.txt  main.cpp  testClass.cpp
coreProject/icLib/: testClass.h
coreProject/icLib/icEntity/: entity.cpp  entity.h
extraItems/: CMakeLists.txt  main.cpp  someEnums.cpp  someEnums.h
projectA/: CMakeLists.txt  main.cpp
projectA/src/: treeView.cpp  treeView.h
projectB/: CMakeLists.txt  main.cpp
projectB/src/: extendedTreeView.cpp  extendedTreeView.h
